Added data df checks wih tests and mocks

--- a/vignettes/UMARfetchR_workflow.Rmd
+++ b/vignettes/UMARfetchR_workflow.Rmd
@@ -20,7 +20,7 @@ This is one of a family of data fetching packages, which include `SURSfetchR`, `
 Each data series must have:
 
 * metadata or structural data, which the author prepares in a specified format and which gets imported into the database once. The format is one row per series and more details are given in section \@ref(meta). Each author has one structural file and additional series are all added to the same file.
-* the timeseries data, which is formatted columnwise and more details are given in section \@ref(data). This file is updated with new rows when more data becomes available and ingested into the database. 
+* the timeseries data, which is formatted columnwise and more details are given in section \@ref(data-specs). This file is updated with new rows when more data becomes available and ingested into the database. 
 
 
 # Workflow
@@ -36,6 +36,7 @@ The `insert_new_source()` function is run only once as it inserts the source and
 ## Once per author
 
 For each new author the `add_new_author()` function does the following:
+
 * adds the author to the database - which also checks for uniqueness of initials, otherwise change them
 * creates a folder for them in the data pick up location
 * runs `create_structure_template_excel()` and creates the template in their folder to populate with their metadata and is named `umar_serije_metadata_<authorinitials>.xlsx`. And they are given instructions as to how to do this, which are also a vignette in this package [here](Navodila_za_avtorje.html). 
@@ -44,7 +45,7 @@ For each new author the `add_new_author()` function does the following:
 
 ## Once per series 
 
-For each new series, the author prepares a row in the metadata Excel file with have 8 or 9 columns. The filename is the input for the ` main_structure()` which does the following:
+For each new series, the author prepares a row in the metadata Excel file with have 8 or 9 columns. The filename is the input for the `main_structure()` which does the following:
 
 * reads the file with the metadata
 * parses it and checks the data is reasonable with `parse_structure()` , which also computes columns (9), 10 and 11.
@@ -53,7 +54,13 @@ For each new series, the author prepares a row in the metadata Excel file with h
 
 ## Once per data update
 
-Each time an author wants to update their data, they update the data Excel file by adding the new rows for the new time periods. `parse_data()` checks the consistency of the data and `prep_and_import_data()` then imports it into the database. 
+Each time an author wants to update their data, they update the data Excel file by adding the new rows for the new time periods.
+ 
+The function `main_data()` is an umbrella function that does the following:
+
+* reads the file with the data
+*  parses it and checks the data is reasonable `parse_data()`, which also checks if there is any difference with the data alreay in the database.
+* `prep_and_import_data()` then imports it into the database if needed.
 
 # Specifications {#specs}
 
@@ -69,8 +76,8 @@ The `create_structure_template_excel()` creates a template with nine columns, ei
 
 * **table_name**: descriptive name grouping a bunch of series that have the same dimensions
 * **dimensions**: name of dimensions - at least one. If there are more, they have to be separated by "--"
-* **dimension_levels_text**: the level text and codes need to match in number, and also between series. So if you have two dimensions, you need ot have a level_text for each and a level_code for each, again separated by "--"
-* **dimension_levels_code**: here is an example: The dimensions might be "geography--gender", and then the dimension levels text could be for one series "Ljubljana--moški" or "Maribor--ženske", and then the codes could be "lj--m", "mb--f". The choice of codes is up to the author, but they should be short!
+* **dimension_levels_text**: the level text and codes need to match in number, and also between series. So if you have two dimensions, you need ot have a level_text for each and a level_code for each, again separated by `"--"`
+* **dimension_levels_code**: here is an example: The dimensions might be `"geography--gender"`, and then the dimension levels text could be for one series `"Ljubljana--moški"` or `"Maribor--ženske"`, and then the codes could be `"lj--m"`, `"mb--f`". The choice of codes is up to the author, but they should be short!
 * **unit**: must be one of the units in the database. See appendix for list. 
 * **interval**: "M", "Q" or "A" for now
 * **series_name**: descriptive name for series - if this is left empty, the dimension_levels_text will be used instead, which is not ideal, but better than nothing. 
@@ -80,6 +87,29 @@ Then there are two additional columns that get computed during the import proces
 * **table_code**: is a combination of the author's initials (fron the umar_authors table in the database) and a three digit incremental number. e.g. "MZ003" etc. These are computed automatically based on what is already in the database
 * **series_code**: is computed as a combination of the source, the table name, the dimension level codes and the interval. e.g. "UMAR--MZ012--LJ--M--Q". ^[ If the data source is given as something else, then this is indicated in the series_code. E.g. if the source is "eurostat", the code will end up being e.g. "UMAR-EUROSTAT--MZ013--EU--P1--1--A".
 
-## Data specs {#data}
+## Data specs 
+
+The data tables must be **tidy**:
+
+* each row represents one time interval
+* each column represents a series, using the `series_codes` which result from the `main_structure()` run and can be found in the updated metadata Excel
+* therefore each interval type requires it's own worksheet, which should be named "M", "Q", or "A"
+
+The tables must:
+
+* have one column titled **`period`**, which must contain the correctly formatted time e.g. "2020M04" for months or "2023Q4" for quarters and must be incrementally and monotonically increasing i.e. no duplicated period values are allowed.  
+* have column names that are legit **`series_code`** values (with the correct interval) and no duplicates
+* have their header in the first row ^[Although this is not strictly necessary, because the Excel reading funciton is quite smart here, just don't tell anyone]. 
+
+The tables can:
+
+* gave series of different lengths - but the period values must exist for the longest series.
+
+The tables don't have to:
+
+* have all the series that were in the structure table. But why would you do that? 
+* have all the worksheets if the series for them don't exist. 
+
+
 
 
